# pagecore

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: PageCoreConfig.cmake.in  apply_patch.cmake  build_dom_shim.cmake  embed_file.cmake  strip_js_comments.js  strip_release_binary.cmake
cmake/patches/: 0001-litehtml-external-tree-build.patch
docs/: architecture.md  browser-api-support.md  testing.md
examples/: CMakeLists.txt  embed_minimal.cpp
examples/visual-regression/: README.md  display-list.json  fixture.js  index.html  style.css  theme.css
include/pagecore/: dom.hpp  image_decoder.hpp  image_io.hpp  page.hpp  perf.hpp  render.hpp  resource_loader.hpp
src/: async_loader.hpp  base64_codec.cpp  base64_codec.hpp  cairo_raster.cpp  cookie_jar.cpp  cookie_jar.hpp  css_scan.cpp  css_scan.hpp  curl_async_loader.cpp  curl_async_loader.hpp  curl_transfer.hpp  display_list_dump.cpp  dom_document.cpp  dom_document.hpp  dom_shim.js  event_loop.cpp  event_loop.hpp  html_encoding.cpp  html_encoding.hpp  image_decoder.cpp  image_io.cpp  js_runtime.cpp  js_runtime.hpp  litehtml_layout.cpp  page.cpp  page_activity_tracker.cpp  page_activity_tracker.hpp  perf_scope.hpp  render_resource_loaders.cpp  render_resource_loaders.hpp  rendering_disabled.cpp  resource_loader.cpp  script_type.cpp  script_type.hpp  subresource_scanner.cpp  subresource_scanner.hpp  util.cpp  util.hpp  web_fonts.cpp  web_fonts.hpp
src/dom_shim/: 00_runtime.js  10_core.js  20_events.js  30_dom.js  40_web.js  45_forms.js  50_streams.js  60_compat.js  90_install.js  99_boot.js
tests/: pagecore_tests.cpp
tests/display-list/: pagecore-display-list-reftests.json
tests/dom_shim/: dom_shim_unit_tests.js
tests/tools/: generate_wpt_manifest_unit_tests.js  run_display_list_reftests_unit_tests.js  run_wpt_subset_unit_tests.js
tests/tools/fixtures/: fake_wpt_case_runner.js  run_wpt_subset_isolation_manifest.json  run_wpt_subset_multiroot_manifest.json  run_wpt_subset_parallel_manifest.json  run_wpt_subset_report_manifest.json
tests/tools/fixtures/overlay-root-a/: overlay-resource.txt
tests/wpt/: README.md  pagecore-wpt-extended.json  pagecore-wpt-smoke.json
tests/wpt/cookies/: pagecore-document-cookie.window.js
tests/wpt/css/cssom-view/: pagecore-geometry.window.js
tests/wpt/dom/events/: pagecore-testdriver-click.window.js
tests/wpt/dom/nodes/: pagecore-document-basics.window.js
tests/wpt/fetch/api/: pagecore-fetch-headers-override.window.js  pagecore-fetch.window.js
tests/wpt/fetch/api/resources/: data.json  mime-override.txt  mime-override.txt.headers
tests/wpt/resources/: testdriver-actions.js  testdriver-vendor.js  testdriver.js  testharness.js  testharness_unit_tests.js  testharnessreport.js
tests/wpt/vendor-overlay/resources/: testdriver-vendor.js
tools/: check_dom_shim_modules.js  generate_wpt_manifest.js  pagecore_cli.cpp  pagecore_wpt_case.cpp  perf_trace_summary.js  run_display_list_reftests.js  run_wpt_subset.js
